# gdmbayes

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml  quick_test.py  setup_env.sh  test_hpc.sbatch  test_hpc.sh  verify_install.sh
benchmarks/: white2024_table1.csv
docs/: GDM_COMPATIBILITY.md  architecture.md  design_decisions.md  validation.md  variance_sampling_issues.md
examples/: __init__.py  basic_usage.py  bci_example.py  compare_results.py  gcfr_example.py  gdm_compatible_example.py  model_variants.py  monitor_jobs.sh  monitor_pilot.sh  panama_example.py  panama_test_diagnostics.py  run_bayes_bci.sh  run_bayes_gcfr.sh  run_bayes_panama.sh  run_bayes_sw.sh  run_freq.sh  run_freq_panama.sh  run_freq_sw.sh  run_panama_gpfix.sh  run_panama_poly_test.sh  run_panama_smoke.sh  run_r_gdm.R  run_sw_smoke.sh  southwest_example.py  southwest_running_example.ipynb  submit_cv_seeds.sh  test_seed_reproducibility.py  validate_metrics.py
examples/data/: bci_sites.csv  southwest.csv  southwest_y.csv
experiments/panama_single_fold/: prepare_fold.R  run_bayes_ours.py  run_bayes_ours_diagnose_47.py  run_bayes_ours_rerun_47.py  run_bayes_white.R  run_freq_gdm.py  run_r_gdm.R  sbatch_bayes_ours.sh  sbatch_bayes_ours_diagnose_47.sh  sbatch_bayes_ours_rerun_47.sh  sbatch_bayes_white.sh
experiments/white2024_cv/: compare_results.py  gcfr_example.py  monitor_jobs.sh  run_bayes_bci.sh  run_bayes_gcfr.sh  run_bayes_panama.sh  run_bayes_sw.sh  run_freq_panama.sh  run_freq_sw.sh  run_r_gdm.R  southwest_example.py  submit_cv_seeds.sh  test_seed_reproducibility.py  validate_metrics.py
paper/: Wiley-AuthoringTemplate.sty  journal_planning.md  manuscript.md  manuscript.tex  references.bib  scaffold.tex
paper/wiley-template/: Wiley-AuthoringTemplate.sty
src/gdmbayes/: __init__.py  _version.py  cv.py  diagnostics.py  maps.py  utils.py  (+2 more)
tests/: __init__.py  test_distances.py  test_models.py  test_preprocessor.py
(+73 files in other folders)
